# ptrace

./: README.md  meson.build
config/ptrace/: all.cfg  app.cfg  sys.cfg
lib/: libptrace.pc.in  ptrace.cc  ptrace.h
lib/test/: main.c
patchs/: virglrenderer-0.9.1.patch
perfetto/: perfetto.cc
proto/: readme.txt
tools/: main.cc  ptrace_cmd.cc  ptrace_combine.cc  ptrace_msg.cc  ptrace_msg.h
